--- a/src/Layout/Header.module.css
+++ b/src/Layout/Header.module.css
@@ -1,26 +1,26 @@
-.header{
-   display: flex;
-   position: fixed;
-   top: 0;
-   left: 0;
-   border: 2px rgb(92, 67, 35) solid;
-   width: 100%;
-   height: 5rem;
-   justify-content:space-between ;
-   align-items: center;
-   background-color:rgb(92, 67, 35);
-   z-index: 10;
-   color: rgb(216, 197, 144);
-   padding: 0 15px;
+.header {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border: 2px #f1f5f8 solid;
+  width: 100%;
+  height: 5rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f1f5f8;
+  z-index: 10;
+  color: rgb(216, 197, 144);
+  padding: 0 15px;
 }
-.main-img{
-    width: 100%;
-    height: 30rem;
-    z-index: 0;
-    overflow: hidden;
+.main-img {
+  width: 100%;
+  height: 30rem;
+  z-index: 0;
+  overflow: hidden;
 }
-.img{
-   width: 100%;
-    height: 100%;
-object-fit: cover;
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
