--- a/src/Layout/HeaderCartButton.module.css
+++ b/src/Layout/HeaderCartButton.module.css
@@ -1,26 +1,36 @@
-.button{
-display: flex;
-justify-content:space-around;
-align-items:center;
-font:inherit;
-font-weight:900;
-padding: 1rem 3rem;
-border-radius: 15px;
-background-color:lemonchiffon;
-
-}
-.icon{
-    width: 1.3rem;
-    height: 1.3rem;
-    margin-right: .5rem;
+.container {
+  display: flex;
+  align-items: center;
+  span{
+ font-size: 1rem;
+  }
 }
 
-.badge{
-    margin-left: .5rem;
-    border-radius: 10px;
-    background-color: maroon;
-    font-weight: bolder;
-    color: mintcream;
-    padding: .7rem;
-   
+.button {
+  display: flex;
+  align-items: center;
+  background-color: #96b7dd;
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 70px 10px 25px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.badge {
+  background-color: #64d380;
+  color: #fff;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 12px;
+  margin-left: 6px;
 }
