--- a/src/Meals/AvailableMeals.module.css
+++ b/src/Meals/AvailableMeals.module.css
@@ -1,11 +1,7 @@
 .meals{
-    max-width: 60rem;
-    width: 90%;
+    max-width: 1460px;
     margin: 2rem auto;
-  
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.meals ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
