--- a/src/Meals/MealSummery.module.css
+++ b/src/Meals/MealSummery.module.css
@@ -1,26 +1,44 @@
-.summery{
-    width:50%;
-    height: 20%;
-    padding: 5px;
-    margin: -100px auto 0 auto;
-    background-color: cornsilk;
-    z-index: 10;
-   position: relative;
-   top: 10%;
-   border: rgba(230, 94, 94, 0.596) 1px groove;
- border-radius: 30px;
- box-shadow:  5px 5px 5px rgba(230, 94, 94, 0.596);
+.wrapper {
+  margin: -100px auto 0 auto;
+  width: 50%;
+  position: relative;
+  background-color: #98bee98f;
+  border: #5a88b3 3px solid;
+  z-index: 1;
+}
+.layer {
+  
+  width: 100%;
+  height: 18rem;
+  z-index: 10;
+  filter: blur(15px);
+  margin: 0 auto;
 
 }
-.summery h2{
-    font-size: 2.3rem;
-    font-weight: 900;
-    color: rgb(134, 57, 57);;
-    text-align: center;
+.summery {
+  width: 96%;
+  padding: 5px;
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  /* background-color: #98bee9c2; */
+ 
+  border-radius: 6px;
+  z-index: 100;
+  
+
+  
 }
-.summery p{
-    font-size: 1.3rem;
-    font-weight: 200;
-    color: rgb(134, 57, 57);;
-    text-align: center;
-}  
+.summery h2 {
+  font-size: 2.3rem;
+  font-weight: 900;
+  color: rgb(86, 25, 139);
+  text-align: center;
+}
+.summery p {
+  font-size: 1.3rem;
+  font-weight: 200;
+  color: rgb(86, 25, 139);
+  text-align: center;
+  z-index: 100;
+}
