--- a/src/pages/detail/MeaDetails.module.css
+++ b/src/pages/detail/MeaDetails.module.css
@@ -1,5 +1,57 @@
-.details{
-    h2{
-        margin-top: 10rem;
+.details {
+  width: 50%;
+  padding: 10px;
+  margin: 6rem auto;
+  border: 3px rgb(142, 158, 167) solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: rgba(246, 246, 248, 0.322);
+  text-decoration: none;
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  h3 {
+    font-size: 1.15rem;
+    font-weight: 500;
+    color: rgb(102, 92, 119);
+    padding: 0;
+    margin: 0;
+  }
+  .image {
+    width: 100%;
+    height: 20rem;
+  }
+  .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .amount {
+    display: flex;
+    padding: 5px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .price {
+    font-size: 1.15rem;
+    font-weight: 700;
+    color: rgb(34, 39, 77);
+    padding: 0;
+    margin: 0;
+  }
+  .ingredient {
+    display: flex;
+    flex-wrap: wrap;
+
+    li {
+      margin: 0 1rem;
     }
+
+  }
 }
