--- a/src/Layout/HeaderCartButton.module.css
+++ b/src/Layout/HeaderCartButton.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   align-items: center;
+
   span{
  font-size: 1rem;
   }
@@ -8,12 +9,13 @@
 
 .button {
   display: flex;
+  flex-direction: column;
   align-items: center;
   background-color: #96b7dd;
   color: #fff;
   border: none;
   border-radius: 25px;
-  padding: 10px 70px 10px 25px;
+  padding: 10px 50px 10px 25px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -22,9 +24,9 @@
   background-color: #0056b3;
 }
 
-.icon {
+/* .icon {
   margin-right: 10px;
-}
+} */
 
 .badge {
   background-color: #64d380;
