deploying the project Fixes andsome fixes on responsiveness

--- a/src/Layout/HeaderCartButton.module.css
+++ b/src/Layout/HeaderCartButton.module.css
@@ -36,3 +36,11 @@
   font-size: 12px;
   margin-left: 6px;
 }
+@media (max-width: 540px) {
+  .container {
+    position: absolute;
+    top: 100%;
+  right: 0;
+  }
+  }
+  
