--- a/src/Meals/MealList.module.css
+++ b/src/Meals/MealList.module.css
@@ -2,12 +2,12 @@
     width:380px;
     padding:10px;
 margin: 6px;
-border: 3px rgb(142, 158, 167) solid;
+border: 1px #96b7dd7a solid;
 display: flex;
 flex-direction: column;
 justify-content:space-between;
 border-radius: 10px;
-background-color: rgba(246, 246, 248, 0.322);
+background-color: #96b7dd27;
 text-decoration: none;
 }
 
@@ -21,12 +21,14 @@ text-decoration: none;
 .card .image{
   width: 100%;
    max-height: 156px;
+
  
 }
 .image img{
      width: 100%;
      height: 100%;
      object-fit: cover;
+     border-radius: 10px;
     
  }
 .amount{
