--- a/src/auth/auth.module.css
+++ b/src/auth/auth.module.css
@@ -1,4 +1,5 @@
 .logout{
+    position: relative;
     margin-left: auto;
     background-color: #0056b3;
     color:#fff;
@@ -9,5 +10,16 @@ border: #0056b3;
 cursor: pointer;
 }
 .login{
+    position: relative;
     margin-left: auto;
 }
+@media (max-width: 540px) {
+    .login {
+     margin-right: 1.5rem;
+
+    }
+    .logout{
+        margin-right: 1.5rem;
+    }
+    }
+    
