--- a/src/Cart/CartItems.module.css
+++ b/src/Cart/CartItems.module.css
@@ -1,66 +1,76 @@
-.item{
-    padding:10px;
-    margin: 0;
-    border-bottom: 1px #96b7dd solid;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.986);
+.item {
+  padding: 10px;
+  margin: 0;
+  border-bottom: 1px #96b7dd solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.986);
 }
-.item h2{
-    font-size: 1rem;
-    font-weight: 700;
-    color:#000000;
-    padding: 0;
-    margin: 0;
+.item h2 {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #000000;
+  padding: 0;
+  margin: 0;
 }
-.item p{
-    font-size: 1rem;
-    color: rgb(0, 0, 0);
-    text-align:left;
-    padding: 0;
-    margin: 0;
-    font-style: italic;
+.item p {
+  font-size: 1rem;
+  color: rgb(0, 0, 0);
+  text-align: left;
+  padding: 0;
+  margin: 0;
+  font-style: italic;
 }
-.price{
-    font-size: 1rem;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-    padding: 0;
-    margin: 0;
+.price {
+  font-size: 1rem;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+  padding: 0;
+  margin: 0;
 }
-.amount{
-    display: flex;
-    padding: 5px;
-    flex-direction: row;
-    justify-content:space-around;
-    align-items: center ;
+.amount {
+  display: flex;
+  padding: 5px;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
-.amount button{
-  padding:0 5px;  
-  margin: 4px; 
-  width:80px; 
+.amount button {
+  padding: 0 5px;
+  margin: 4px;
+  width: 80px;
   background-color: rgb(242, 247, 255);
-  border:1px solid rgb(169, 194, 211);
+  border: 1px solid rgb(169, 194, 211);
   border-radius: 5px;
   font-size: 1rem;
   cursor: pointer;
-
 }
 .amount button:hover {
-    background-color: #96b7dd; /* Change color on hover */
-  }
-  .amount button:active {
-    transform: scale(0.95); /* Change color on hover */
-  }
-.price button{
-    margin-left: 10px;
-    font-size: .9 rem;
-    background-color: #0056b3;
-    border-radius: 5px;
-    font-weight:500;
-    color: #fff;
-    border: 1px solid rgb(141, 141, 228);
+  background-color: #96b7dd; /* Change color on hover */
 }
-
+.amount button:active {
+  transform: scale(0.95); /* Change color on hover */
+}
+.price button {
+  margin-left: 10px;
+  font-size: 0.9 rem;
+  background-color: #0056b3;
+  border-radius: 5px;
+  font-weight: 500;
+  color: #fff;
+  border: 1px solid rgb(141, 141, 228);
+}
+@media (max-width: 768px) {
+  .item h2 {
+    font-size: 0.85rem;
+    font-weight: 700;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+  }
+  .amount button {
+    width: 60px;
+  }
+}
