--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -13,7 +13,7 @@ opacity: 0.7;
     top: 20vh;
     left: 30%;
     width: 40%;
-   
+  
     background-color: white;
     padding: 1rem;
     border-radius: 14px;
@@ -27,3 +27,12 @@ flex-direction: column;
 
 
 }
+@media (max-width: 920px) {
+    .modaloverlay {
+      position: relative;
+        width:80%;
+        left: 0;
+        margin: auto;
+    }
+  }
+  
