--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,17 @@
 body{
     margin: 0 auto;
 }
+.fade-enter{
+  opacity: 0;
+}
+.fade-enter-active{
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+.fade-exsit{
+  opacity: 1;
+}
+.fade-exsit-active{
+  opacity: 0;
+  transition: opacity 300ms ease-out;
+}
