--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -13,7 +13,6 @@ opacity: 0.7;
     top: 20vh;
     left: 30%;
     width: 40%;
-  
     background-color: white;
     padding: 1rem;
     border-radius: 14px;
@@ -27,6 +26,24 @@ flex-direction: column;
 
 
 }
+.overlay-enter {
+  opacity: 0;
+}
+
+.overlay-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.overlay-exit {
+  opacity: 1;
+}
+
+.overlay-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-out;
+}
+
 @media (max-width: 920px) {
     .modaloverlay {
       position: relative;
